# purple-cmake-template

./: CMakeLists.txt  README.md  purple-config.cmake
example/: CMakeLists.txt
src/: CMakeLists.txt  init.c
src/c/: init.c
win32/: purple-fetch.cmake
